--- a/BlazorApp/Pages/CreateUser.razor
+++ b/BlazorApp/Pages/CreateUser.razor
@@ -3,23 +3,55 @@
 @using HttpClients.ClientInterfaces
 @inject IUserService userService;
 
-<div class="card">
-    <h3>Create User</h3>
-    <div class="form-group field">
-        <label>User name:</label>
-        <input type="text" @bind="username" @bind:event="oninput"/>
-        @if (!string.IsNullOrEmpty(resultMsg))
-        {
-            <label style="color: @color">@resultMsg</label>
-        }
-    </div>
+<div class="card" style="width:400px">
+  <img class="card-img-top" src="icons/log-in.png" alt="Card image">
+  <div class="card-body">
+    <h4 class="card-title">Register</h4>
+      <p class="card-text">Create a profile.</p>
+      <div>
+          <label>Username:</label>
+          <input type="text" @bind="username" @bind:event="oninput"/>
+          @if (!string.IsNullOrEmpty(resultMsg))
+          {
+              <label style="color: @color">@resultMsg</label>
+          }
+      </div>
+      <div>
+              <label>First Name:</label>
+              <input type="text" @bind="firstname" @bind:event="oninput"/>
+                @if (!string.IsNullOrEmpty(resultMsg))
+                      {
+                          <label style="color: @color">@resultMsg</label>
+                      }
+          </div>
+          <div>
+               <label>Last Name:</label>
+              <input type="text" @bind="lastname" @bind:event="oninput"/>
+                @if (!string.IsNullOrEmpty(resultMsg))
+                      {
+                          <label style="color: @color">@resultMsg</label>
+                      }
+              </div>
+               <div>
+                            <label>Email Adress:</label>
+                            <input type="text" @bind="emailaddress" @bind:event="oninput"/>
+                              @if (!string.IsNullOrEmpty(resultMsg))
+                                    {
+                                        <label style="color: @color">@resultMsg</label>
+                                    }
+               </div>
     <div class="button-row">
-        <button @onclick="Create" disabled="@(string.IsNullOrEmpty(username))" class="acceptbtn">Create</button>
-    </div>
+        <button @onclick="Create" disabled="@(string.IsNullOrEmpty(username) || (string.IsNullOrEmpty(firstname) ||(string.IsNullOrEmpty(lastname))))" class="acceptbtn">Create</button>
+        </div>
+  </div>
 </div>
+
 
 @code {
     private string username = "";
+    private string firstname = "";
+    private string lastname = "";
+    private string emailaddress = "";
     private string resultMsg = "";
     private string color = "";
     
@@ -31,7 +63,13 @@
         {
             Console.WriteLine("here");
             await userService.Create(new UserCreationDto(username));
+            await userService.Create(new UserCreationDto(firstname));
+            await userService.Create(new UserCreationDto(lastname));
+            await userService.Create(new UserCreationDto(emailaddress));
             username = "";
+            firstname = "";
+            lastname = "";
+            emailaddress = "";
             resultMsg = "User successfully created";
             color = "green";
         }
