--- a/BlazorApp/Pages/ViewUsers.razor
+++ b/BlazorApp/Pages/ViewUsers.razor
@@ -3,9 +3,6 @@
 @using Domain
 @inject IUserService userService
 
-
-<h3 style="text-align: center">Overview of all users</h3>
-
 @if (!string.IsNullOrEmpty(msg))
 {
     <div>
@@ -26,14 +23,27 @@ else
     <div class="users-container">
         @foreach (User user in users)
         {
-            <div class="user-card">
-                <label>@user.UserName</label>
+            <div class="card" style="width:50px">
+                <img class="card-img-top" src="icons/user.png" alt="Card image">
+                <div class="card-img-overlay">
+                    <h4 class="card-title">@user.UserName</h4>
+                    <p class="card-text">This is my personel description</p>
+                    <a href="#" class="btn btn-primary">See Profile</a>
+                </div>
             </div>
         }
     </div>
 }
 
 @code {
+    
+/*   private string username = "";
+    private string firstname = "";
+    private string lastname = "";
+    private string emailaddress = "";
+    private string resultMsg = "";
+    private string color = "";
+*/    
     private IEnumerable<User>? users;
     private string msg = "";
 
@@ -50,4 +60,29 @@ else
             msg = e.Message;
         }
     }
+  /*  private async Task ViewProfile()
+    {
+        resultMsg = "";
+
+        try
+        {
+            Console.WriteLine("here");
+            await userService.Create(new UserCreationDto(username));await userService.Create(new UserCreationDto(firstname));
+            await userService.Create(new UserCreationDto(lastname));
+            await userService.Create(new UserCreationDto(emailaddress));
+            username = "";
+            firstname = "";
+            lastname = "";
+            emailaddress = "";
+            resultMsg = "User successfully created";
+            color = "green";
+        }
+        catch (Exception e)
+        {
+            Console.WriteLine(e);
+            resultMsg = e.Message;
+            color = "red";
+        }
+    }
+    */
 }
