--- a/BlazorApp/wwwroot/css/styles.css
+++ b/BlazorApp/wwwroot/css/styles.css
@@ -1,6 +1,7 @@
 .card {
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     transition: 0.3s;
-    width: fit-content;
+    width: 250px;
     padding: 25px;
     text-align: center;
     margin: auto;
