JWT Addition, There is an error when trying to login. The JWt shows an error. I cannot figure it out atm...

--- a/BlazorApp/Pages/CreateUser.razor
+++ b/BlazorApp/Pages/CreateUser.razor
@@ -41,7 +41,7 @@
         try
         {
             Console.WriteLine("here");
-            await userService.Create(new UserCreationDto(userName, password));
+            await userService.Create(new UserCreationDto(userName, password, securityLevel:4));
             userName = "";
             password = "";
             resultMsg = "User successfully created";
