--- a/BlazorApp/Pages/ViewUsers.razor
+++ b/BlazorApp/Pages/ViewUsers.razor
@@ -1,6 +1,8 @@
 @page "/ViewUsers"
+@attribute [Authorize]
 @using HttpClients.ClientInterfaces
 @using Domain.Model
+@using Microsoft.AspNetCore.Authorization
 @inject IUserService userService
 
 
