--- a/BlazorApp/Shared/MainLayout.razor
+++ b/BlazorApp/Shared/MainLayout.razor
@@ -1,4 +1,5 @@
 ﻿@inherits LayoutComponentBase
+@using Login
 
 <div class="page">
     <div class="sidebar">
@@ -7,9 +8,8 @@
 
     <main>
         <div class="top-row px-4">
-            <a href="https://docs.microsoft.com/aspnet/" target="_blank">About</a>
+            <LoginButtons/>
         </div>
-
         <article class="content px-4">
             @Body
         </article>
