--- a/BlazorApp/Pages/Login.razor
+++ b/BlazorApp/Pages/Login.razor
@@ -28,9 +28,10 @@
             </div>
         </div>
     </NotAuthorized>
+    
     <Authorized>
         <div class="card">
-            @* <h3>Hello, @context.User.Identity.Name</h3> *@
+            <h3>Hello, @context.User.Identity.Name</h3>
         </div>
     </Authorized>
 </AuthorizeView>
@@ -47,7 +48,6 @@
         {
     
             await authService.LoginAsync(userName, password);
-           
             navMgr.NavigateTo("/");
        
         }
