--- a/BlazorApp/Pages/LoginButtons.razor
+++ b/BlazorApp/Pages/LoginButtons.razor
@@ -4,13 +4,15 @@
 @namespace Login
 
 <AuthorizeView>
+    <Authorized>
+        <img class="icon" src="icons/Logout.png" @onclick="Logout"/>
+    </Authorized>
     <NotAuthorized>
         <img class="icon" src="icons/Login.png" @onclick="Login"/>
     </NotAuthorized>
 </AuthorizeView>
 
 @code {
-
     private void Login()
     {
         navMgr.NavigateTo("/Login");
