--- a/BlazorApp/App.razor
+++ b/BlazorApp/App.razor
@@ -3,8 +3,7 @@
         <Found Context="routeData">
             <AuthorizeRouteView RouteData="@routeData" DefaultLayout="@typeof(MainLayout)">
                 <NotAuthorized>
-                    <img width="600" src="https://i.kym-cdn.com/entries/icons/original/000/002/144/You_Shall_Not_Pass!_0-1_screenshot.jpg"/>
-                    <p>You'll have to log in!</p>
+                   <h1> <span class="badge bg-secondary align-content-center">Please Create an Account</span></h1>
                 </NotAuthorized>
             </AuthorizeRouteView>
             <FocusOnNavigate RouteData="@routeData" Selector="h1"/>
