--- a/BlazorApp/Shared/NavMenu.razor
+++ b/BlazorApp/Shared/NavMenu.razor
@@ -19,11 +19,15 @@
                 <span class="oi oi-plus" aria-hidden="true"></span> Create user
             </NavLink>
         </div>
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="ViewUsers">
-                <span class="oi oi-plus" aria-hidden="true"></span> View Users
-            </NavLink>
-        </div>
+        <AuthorizeView>
+            <Authorized>
+            <div class="nav-item px-3">
+                <NavLink class="nav-link" href="ViewUsers">
+                    <span class="oi oi-plus" aria-hidden="true"></span> View Users
+                </NavLink>
+            </div>
+            </Authorized>
+        </AuthorizeView>
     </nav>
 </div>
 
