The User class has been updated

--- a/BlazorApp/Pages/CreateUser.razor
+++ b/BlazorApp/Pages/CreateUser.razor
@@ -31,7 +31,6 @@
 @code {
     private string userName = "";
     private string password = "";
-    private string userType = "User";
     private string resultMsg = "";
     private string color = "";
     
@@ -42,10 +41,8 @@
         try
         {
             Console.WriteLine("here");
-            await userService.Create(new UserCreationDto(userName, password, securityLevel:4,userType));
+            await userService.Create(new UserCreationDto(userName, password, "User"));
             userName = "";
-            password = "";
-            userType = "User";
             resultMsg = "User successfully created";
             color = "green";
         }
