--- a/BlazorApp/Shared/NavMenu.razor
+++ b/BlazorApp/Shared/NavMenu.razor
@@ -21,11 +21,16 @@
         </div>
         <AuthorizeView>
             <Authorized>
-            <div class="nav-item px-3">
-                <NavLink class="nav-link" href="ViewUsers">
-                    <span class="oi oi-plus" aria-hidden="true"></span> View Users
-                </NavLink>
-            </div>
+                <div class="nav-item px-3">
+                    <NavLink class="nav-link" href="ViewTutors">
+                        <span class="oi oi-plus" aria-hidden="true"></span> View Users
+                    </NavLink>
+                </div>
+                <div class="nav-item px-3">
+                    <NavLink class="nav-link" href="BecomeTutor">
+                        <span class="oi oi-people" aria-hidden="true"></span> Become a Tutor
+                    </NavLink>
+                </div>
             </Authorized>
         </AuthorizeView>
     </nav>
