--- a/BlazorApp/Pages/BecomeTutor.razor
+++ b/BlazorApp/Pages/BecomeTutor.razor
@@ -1,10 +1,11 @@
 @page "/BecomeTutor"
-@attribute [Authorize]
+@attribute [Authorize("MustBeUser")]
 @using Domain.Model
 @using HttpClients.ClientInterfaces
 @using Domain.DTOs
 @inject AuthenticationStateProvider AuthenticationStateProvider
 @inject IUserService userService
+@inject NavigationManager navMgr
 <h1>Become a Tutor</h1>
 <p>Please fill out the information below to become a tutor:</p>
 
@@ -44,6 +45,7 @@
         user = users.FirstOrDefault(u => u.UserName.Equals(authState.User.Identity.Name));
         await userService.BecomeTutor(new UserToTutorDto(user, course, description));
         
-        }
+        navMgr.NavigateTo("/", forceLoad:true);
+    }
 
 }
