--- a/BlazorApp/Shared/NavMenu.razor
+++ b/BlazorApp/Shared/NavMenu.razor
@@ -23,15 +23,17 @@
             <Authorized>
                 <div class="nav-item px-3">
                     <NavLink class="nav-link" href="ViewTutors">
-                        <span class="oi oi-plus" aria-hidden="true"></span> View Users
+                        <span class="oi oi-plus" aria-hidden="true"></span> View Tutors
                     </NavLink>
                 </div>
+            </Authorized>
+        </AuthorizeView>
+        <AuthorizeView Policy="MustBeUser">
                 <div class="nav-item px-3">
                     <NavLink class="nav-link" href="BecomeTutor">
                         <span class="oi oi-people" aria-hidden="true"></span> Become a Tutor
                     </NavLink>
                 </div>
-            </Authorized>
         </AuthorizeView>
     </nav>
 </div>
