--- a/BlazorApp/Pages/ViewProfile.razor
+++ b/BlazorApp/Pages/ViewProfile.razor
@@ -51,6 +51,6 @@ else
     }
     private async Task MessageAsync(string userName)
     {
-        navMgr.NavigateTo($"/MessagePlatform/{userName}");
+        navMgr.NavigateTo($"/MessagePlatform");
     }
 }
