--- a/BlazorApp/Shared/MainLayout.razor
+++ b/BlazorApp/Shared/MainLayout.razor
@@ -1,5 +1,6 @@
 ﻿@inherits LayoutComponentBase
 @using Login
+@using Buttons
 
 <div class="page">
     <div class="sidebar">
@@ -8,6 +9,7 @@
 
     <main>
         <div class="top-row px-4">
+            <Buttons/>
             <LoginButtons/>
         </div>
         <article class="content px-4">
